tdf#93097 oox: fix import of metadata from non-relative stream paths

Commit ef2668bad976f1fbb70759887cafd35ea7833655 (PPTX import: fix
missing document metadata, 2014-08-28) implemented metadata import for
the PPTX filter, but in case the metadata stream is not an existing one,
then OHierarchyHolder_Impl::GetListPathFromString() invoked by
OStorage::openStreamElementByHierarchicalName() throws.

The bugdoc is generated by a 3rd-party tool that always starts the
stream path with a slash, and MSO seems to just ignore that: so let's do
the same to be able to open the document.

(cherry picked from commit 46cf9bb76b29f2bfa6639d9aaf4f26dee365bc0c)

Conflicts:
	sd/qa/unit/import-tests.cxx

Reviewed-on: https://gerrit.libreoffice.org/18372
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>

Conflicts:
	sd/qa/unit/import-tests.cxx

Change-Id: I6c0715adeb19b9055669f6a45055415dd2c44e28